lib: import `pdn` library
Import the `pdn` library, required by the `lte_connectivity` library.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -13,5 +13,6 @@ rsource "lte_link_control/Kconfig"
 rsource "multithreading_lock/Kconfig"
 rsource "nrf_modem_lib/Kconfig"
 rsource "modem_key_mgmt/Kconfig"
+rsource "pdn/Kconfig"
 
 endmenu
