--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory_ifdef(CONFIG_LTE_LINK_CONTROL lte_link_control)
 add_subdirectory_ifdef(CONFIG_MULTITHREADING_LOCK multithreading_lock)
 add_subdirectory_ifdef(CONFIG_NRF_MODEM_LIB nrf_modem_lib)
 add_subdirectory_ifdef(CONFIG_MODEM_KEY_MGMT modem_key_mgmt)
+add_subdirectory_ifdef(CONFIG_PDN pdn)
